# cadabra

./: .ditz-config  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.in  README.md  cadabra.desktop  configure  configure.in  history
bugs/: issue-0129edd57e7b9ea4932040eeb5d1ba7e83a939db.yaml  issue-0180195bb345a1d9168742e86b5f9edd57c33937.yaml  issue-0e5c24e6c9013074288544cc99023cb7674fef2f.yaml  issue-1040b3b57b849b9b2cc8fee189ecb0df52544a75.yaml  issue-15e3e1b9b66a3841c79e43937e91a0f2ada5ae2b.yaml  issue-16b3dc7c2f7508a10da63f93e3407730a757908e.yaml  issue-1c7bc5e7512020226c1ca90fb249cab7886b6833.yaml  issue-1e849154a481bf8a79a06066d104b26efba56381.yaml  issue-21fdb7347ae291cf9d98ff53c123057a20a0521d.yaml  issue-2482679b6ec55d83b3f1c431bd7c31047dde8221.yaml  issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.yaml  issue-26a1e390e3639bfcd4eff412054f29beb796a5d3.yaml  issue-275e6042623fde84879a0c1864f064559562ed3c.yaml  issue-2c1e76aeb0f5cf8011ea0bb399c5411e35a1b1e7.yaml  issue-37d2a9206418dbc66533d3b658d17e4ffb5d8ed2.yaml  issue-38650fc2470a22a6ab2e76ff1b7ebd1f336fa76d.yaml  issue-38a7e972acdc3b14543563da04b16b3968730129.yaml  issue-3a0fb777111329baf741dde7dc04fd19ea4885d6.yaml  issue-4db2db8287019b302eafd70dda2d8cdb818f669b.yaml  issue-4dce789d9676fe7d510b0489a82f68ce21749c73.yaml  issue-54b0e71bcc140a8f760bc9835bb6cea84677e76f.yaml  issue-583a97dcb71402c9fe6a61f48b4847de22c23900.yaml  issue-5c264626947a0e6a9f8b454746ecf7a017f429d0.yaml  issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.yaml  issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.yaml  issue-871645e20be95eb7b7441170c49d375d770570a0.yaml  issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.yaml  issue-8e86307cac2cf8eb3cf538213e29e428da7cbc1b.yaml  issue-9258c825583707f6bf901795c9d4e2a82f13e0d3.yaml  issue-96cc2f197c8a31e580777b96155261bdb581005c.yaml  issue-9bc33d2ce36bc0dd67c03d09cc1c2ab5e9eba099.yaml  issue-9c8f132023a13bdea10ef87e26d37d681705a8d1.yaml  issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.yaml  issue-a581c29d3f2a279c34df52be8f4b8761dabc18fa.yaml  issue-a7f3c6de890010983ccd353a949975bd1b4f66b3.yaml  issue-ada88ddc28be6f0f3567fc2d0f50fb3dc64a37b4.yaml  issue-b5dc914a9876677a3e1059466fd741fb4d2ab336.yaml  issue-b5f5ed9ac93dd64deddecc606872e6a00009d6be.yaml  issue-b992ba2a0e28143cf1a66c11a8c4284df71bad33.yaml  issue-becb40c03914860dbc07ef30bb8fb898a9089a73.yaml  (+18 more)
debian/: changelog  control  copyright  rules
doc/: ChangeLog  Makefile  Makefile.in  amazing  cadabra.sty  cadabra.tex  combinatorics.tex  components.tex  doxygen_cadabra.config  doxygen_tree.config  exp1.eps  exp1.fig  exp2.eps  formal.tex  general.tex  index.html  maxima_frontend  newtree.html  osx.txt  paper.tex  showcase.tex  tree.html  windows.txt  xperm.nb  youngtab++.tex
examples/: bianchi_identities.cnb  fierz.cnb  leo1.cnb  maxima.cnb  maxwell.cnb  simple_clifford.cnb  supergravity.cnb  tutorial3.cnb  young_tableaux.cnb
gui/: Makefile.in  cadabra.el  caslink.hh  help.cc  help.hh  main.cc  mathtex_cpp.pyx  render.py  tutorial3.cnb  undo.hh  widgets.cc  widgets.hh  window.cc  window.hh
html/: component-cadabra.html  index.html  issue-0129edd57e7b9ea4932040eeb5d1ba7e83a939db.html  issue-0180195bb345a1d9168742e86b5f9edd57c33937.html  issue-0e5c24e6c9013074288544cc99023cb7674fef2f.html  issue-1040b3b57b849b9b2cc8fee189ecb0df52544a75.html  issue-15e3e1b9b66a3841c79e43937e91a0f2ada5ae2b.html  issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html  issue-1c7bc5e7512020226c1ca90fb249cab7886b6833.html  issue-1e849154a481bf8a79a06066d104b26efba56381.html  issue-21fdb7347ae291cf9d98ff53c123057a20a0521d.html  issue-2482679b6ec55d83b3f1c431bd7c31047dde8221.html  issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.html  issue-26a1e390e3639bfcd4eff412054f29beb796a5d3.html  issue-275e6042623fde84879a0c1864f064559562ed3c.html  issue-2c1e76aeb0f5cf8011ea0bb399c5411e35a1b1e7.html  issue-346b37f904ab241f53474b9142eb559498066598.html  issue-37d2a9206418dbc66533d3b658d17e4ffb5d8ed2.html  issue-38650fc2470a22a6ab2e76ff1b7ebd1f336fa76d.html  issue-38a7e972acdc3b14543563da04b16b3968730129.html  issue-3a0fb777111329baf741dde7dc04fd19ea4885d6.html  issue-4db2db8287019b302eafd70dda2d8cdb818f669b.html  issue-4dce789d9676fe7d510b0489a82f68ce21749c73.html  issue-54b0e71bcc140a8f760bc9835bb6cea84677e76f.html  issue-5c264626947a0e6a9f8b454746ecf7a017f429d0.html  issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.html  issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.html  issue-871645e20be95eb7b7441170c49d375d770570a0.html  issue-88b4ab8f3d8dc4314f47c31b2f9c11a050884367.html  issue-9258c825583707f6bf901795c9d4e2a82f13e0d3.html  issue-96cc2f197c8a31e580777b96155261bdb581005c.html  issue-9bc33d2ce36bc0dd67c03d09cc1c2ab5e9eba099.html  issue-9c8f132023a13bdea10ef87e26d37d681705a8d1.html  issue-a2bec73e247cc89c7cfca20ee457e5295de9475e.html  issue-a581c29d3f2a279c34df52be8f4b8761dabc18fa.html  issue-a7f3c6de890010983ccd353a949975bd1b4f66b3.html  issue-ada88ddc28be6f0f3567fc2d0f50fb3dc64a37b4.html  issue-b5dc914a9876677a3e1059466fd741fb4d2ab336.html  issue-b5f5ed9ac93dd64deddecc606872e6a00009d6be.html  issue-b992ba2a0e28143cf1a66c11a8c4284df71bad33.html  (+25 more)
osx/: .gitignore  Info.plist  cadabra.bundle
rpm/: cadabra.spec
src/: Makefile.in  algorithm.cc  algorithm.hh  combinatorics.cc  combinatorics.hh  config.h  config.h.in  defaults.cc  display.cc  display.hh  engine.hh  exchange.cc  exchange.hh  main.cc  manipulator.cc  manipulator.hh  parser.cc  parser.hh  parser2.l  parser2.y  preprocessor.cc  preprocessor.hh  props.cc  props.hh  settings.cc  settings.hh  stopwatch.cc  stopwatch.hh  storage.cc  storage.hh  test_combinatorics.cc  test_gmp.cc  test_lie.cc  test_parser.cc  test_preprocessor.cc  test_tree.cc  test_xperm.cc  test_young.cc  tree.hh  tree_example.cc  (+8 more)
tests/: Makefile.in  algebra.cdb  bench.cdb  canonicalise.cdb  combinat.cdb  defaults.cdb  derivative.cdb  diff_geometry.cdb  distribute.cdb  dummies.cdb  error  eval.cdb  exponents.cdb  factorise.cdb  fieldtheory.cdb  fierz.cdb  gamma.cdb  indexbracket.cdb  indexsort.cdb  kk.cdb  library.cdb  linear.cdb  lists.cdb  maple.cdb  (+28 more)
(+88 files in other folders)
